SimpleService with Customized Webpage

--- a/xos/synchronizer/model_policies/index.html.j2
+++ b/xos/synchronizer/model_policies/index.html.j2
@@ -21,6 +21,9 @@ limitations under the License.
 
 <h1>ExampleService</h1>
 
+<img src="{{ tenant_image }}" height="100px"/><br/>
+<font style="color: red">{{ render_time }}</font>
+
 <ul>
 <li>Service Message: "{{ service_message }}"</li>
 <li>Tenant Message: "{{ tenant_message }}"</li>
